scrollbar fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@
 
 *::-webkit-scrollbar-thumb{
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);
+  box-shadow: inset 0 0 3px rgba(0,0,0,0.5);
   background-color: rgba(225,225,225,0.5);
 }
 
